@@ -155,6 +155,7 @@ int initprocesstree_sysdep(ProcessTree_T **reference, ProcessEngine_Flags pflags
 
         ProcessTree_T *pt = CALLOC(sizeof(ProcessTree_T), treesize);
 
+        uint64_t now = Time_milli();
         StringBuffer_T cmdline = NULL;
         if (pflags & ProcessEngine_CollectCommandLine)
                 cmdline = StringBuffer_create(64);
@@ -171,9 +172,11 @@ int initprocesstree_sysdep(ProcessTree_T **reference, ProcessEngine_Flags pflags
                 pt[i].read.bytes          = -1;
                 pt[i].read.bytesPhysical  = -1;
                 pt[i].read.operations     = pinfo[i].kp_ru.ru_inblock;
+                pt[i].read.time           = now;
                 pt[i].write.bytes         = -1;
                 pt[i].write.bytesPhysical = -1;
                 pt[i].write.operations    = pinfo[i].kp_ru.ru_oublock;
+                pt[i].write.time          = now;
                 pt[i].zombie              = pinfo[i].kp_stat == SZOMB ? true : false;
                 if (pflags & ProcessEngine_CollectCommandLine) {
                         char **args = kvm_getargv(kvm_handle, &pinfo[i], 0);
